--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <log4jVersion>2.21.1</log4jVersion>
         <mavenJarPluginVersion>3.3.0</mavenJarPluginVersion>
         <mysqlConnectorJVersion>8.2.0</mysqlConnectorJVersion>
+        <mybatisVersion>3.5.15</mybatisVersion>
     </properties>
 
     <dependencies>
@@ -37,6 +38,24 @@
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>${mysqlConnectorJVersion}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>${mybatisVersion}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
         </dependency>
     </dependencies>
 
